# wifi_file_server

./: Cargo.toml  index.html
src/: main.rs
