[package]
name = "wifi_file_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
local-ip-address = "0.6.5"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.5", features = ["fs","trace"] }
mime_guess = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.54", features = ["derive"] }
