[package]
name = "wifi_file_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
local-ip-address = "0.6.8"
tokio = { version = "1.49.0", features = ["full"] }
mime_guess = "2.0"
tracing = "0.1.44"
clap = { version = "4.5.54", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing-subscriber = "0.3.22"

[[bin]]
name = "wfpush"
path = "src/main.rs"
