[package]
name = "wifi_file_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
local-ip-address = "0.6.8"
tokio = { version = "1.49.0", features = ["full"] }
mime_guess = "2.0"
tracing = "0.1.44"
clap = { version = "4.5.54", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["io","compat"] }
tracing-subscriber = "0.3.22"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
async-recursion = "1.1.1"
lru = "0.16.3"
uuid = { version = "1.19.0", features = ["v4"] }
serde_json = "1.0.149"
unicase = "2.9.0"

[[bin]]
name = "wfpush"
path = "src/main.rs"
